--- a/src/app/user-login/user-login.component.css
+++ b/src/app/user-login/user-login.component.css
@@ -23,6 +23,12 @@
     border-radius: 50%;
 }
 
+.btn:disabled{
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  cursor: not-allowed;
+}
+
   @media (min-width: 768px) {
     .bd-placeholder-img-lg {
       font-size: 3.5rem;
