--- a/src/app/user-view/user-view.component.html
+++ b/src/app/user-view/user-view.component.html
@@ -1,10 +1,22 @@
 <div class="container">
 
     <!-- <e-status [(ngModel)]='status' [statusValue]='status'></e-status> -->
- 
+
     <div class="row top-bar p-2">
         <div class="col-lg-4 col-sm-6 col-xs-6">
-            <a class="btn btn-danger" href="login" >LOGOUT</a>
+            <div *ngIf='accessToken!=null||accessToken!=undefined' class="input-group">
+                <div class="input-group-prepend">
+                    <button (click)='loginToGithub()' class="btn btn-outline-secondary"
+                        id="button-addon1">{{user | uppercase}}</button>
+                </div>
+                <div class="input-group-append">
+                    <button class="btn btn-danger" (click)='logoutByGithub()' id="button-addon1">
+                        LOGOUT
+                    </button>
+                </div>
+            </div>
+            <button *ngIf='accessToken==null||accessToken==undefined' class="btn btn-success"
+                (click)='loginToGithub()'>LOGIN</button>
         </div>
         <div class="text-status col-lg-4 col-sm-6 col-xs-6 p-2">
             <span class="text-secondary">STATUS: </span>
@@ -15,18 +27,19 @@
             <span *ngIf='searchedData!=null' class="text-success">
                 SEARCH RESULT</span>
             <span *ngIf='searchedData==null&&status==-1' class="text-danger">
-            ERROR - Something wrong!</span>
+                ERROR - Something wrong!</span>
         </div>
         <!-- <span class="text-secondary font-weight-bold">NETWORK ERROR!</span> -->
         <!--SEARCH BOX-->
         <div class="form-inline col-lg-4 col-sm-12 col-xs-12">
-            <input list="user_list" [(ngModel)]='enteredKeyword' (input)='searchSuggest(enteredKeyword)' (keyup.enter)='searchKeyword(enteredKeyword)'
-             class="form-control mr-sm-2" [value]='enteredKeyword' placeholder="Search Github User" aria-label="Search">
-                <datalist *ngIf="userList!=null" id="user_list">
-                    <option *ngFor="let user of userList.items" (click)='searchKeyword(enteredKeyword)'>
-                        {{user.login}}
-                    </option>
-                </datalist>
+            <input list="user_list" [(ngModel)]='enteredKeyword' (input)='searchSuggest(enteredKeyword)'
+                (keyup.enter)='searchKeyword(enteredKeyword)' class="form-control mr-sm-2" [value]='enteredKeyword'
+                placeholder="Search Github User" aria-label="Search">
+            <datalist *ngIf="userList!=null" id="user_list">
+                <option *ngFor="let user of userList.items" (click)='searchKeyword(enteredKeyword)'>
+                    {{user.login}}
+                </option>
+            </datalist>
             <button class="btn btn-primary my-2 my-sm-0" (click)="searchKeyword(enteredKeyword)">Search</button>
         </div>
     </div>
@@ -76,7 +89,8 @@
                 </h6>
                 <h6 *ngIf='searchedData.blog'>
                     <span class="h-title">Blog : </span>
-                    <a [href]='searchedData.blog' target="_blank"><span class="h-detail">{{searchedData.blog}}</span></a>
+                    <a [href]='searchedData.blog' target="_blank"><span
+                            class="h-detail">{{searchedData.blog}}</span></a>
                 </h6>
                 <h6 *ngIf='searchedData.created_at'>
                     <span class="h-title">Member since : </span>
@@ -89,12 +103,16 @@
                 <span class="badge badge-warning p-1 mr-2 mt-2">Followers : {{searchedData.followers}}</span>
                 <span class="badge badge-info p-1 mr-2 mt-2">Following : {{searchedData.following}}</span>
                 <div class="heading-bar">FOLLOWERS</div>
-                <div  class="f-icon">
-                    <div *ngIf='followersData!=null&&followersData.length!=0' class="list-group list-group-flush" style="max-height: 200px;overflow: auto;">
-                        <a *ngFor="let follow of followersData" (click)='searchKeyword(follow.login)' class="list-group-item py-0 list-group-item-action">
-                            <small><f-icon [avatarUrl]='follow.avatar_url'></f-icon> {{follow.login}}</small>
+                <div class="f-icon">
+                    <div *ngIf='followersData!=null&&followersData.length!=0' class="list-group list-group-flush"
+                        style="max-height: 200px;overflow: auto;">
+                        <a *ngFor="let follow of followersData" (click)='searchKeyword(follow.login)'
+                            class="list-group-item py-0 list-group-item-action">
+                            <small>
+                                <f-icon [avatarUrl]='follow.avatar_url'></f-icon> {{follow.login}}
+                            </small>
                         </a>
-                        <a  href="" class="list-group-item list-group-item-action py-0 pagination disabled"> 
+                        <a href="" class="list-group-item list-group-item-action py-0 pagination disabled">
                             <!--*ngIf="searchedData.followers!=followersData.length"-->
                             <small>LOAD MORE &#9660;</small>
                         </a>
@@ -109,16 +127,17 @@
                     <img class="center img-fluid" src="../../assets/no-repo.png">
                 </div>
                 <div *ngIf='repoData!=null&&repoData.length>0' class="list-group list-group-flush">
-                    <a *ngFor="let repo of repoData|paginate:{itemsPerPage:5,currentPage:p}" href='{{repo.html_url}}' target="_blank" class="list-group-item list-group-item-action">
-                    <div class="d-flex w-100 justify-content-between">
-                        <h6 class="mb-1 text-wrap" style="color:#09476C;">{{repo.name}}</h6>
-                        <span>
-                            <small class="text-muted">{{repo.created_at|date}} </small>
-                            <small class="badge badge-secondary">Watchers : {{repo.watchers_count}}</small>
-                        </span>
-                    </div>
-                    <p class="mb-1 text-wrap">{{repo.description}}</p>
-                    <small class="text-muted">{{repo.language}}</small>
+                    <a *ngFor="let repo of repoData|paginate:{itemsPerPage:5,currentPage:p}" href='{{repo.html_url}}'
+                        target="_blank" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1 text-wrap" style="color:#09476C;">{{repo.name}}</h6>
+                            <span>
+                                <small class="text-muted">{{repo.created_at|date}} </small>
+                                <small class="badge badge-secondary">Watchers : {{repo.watchers_count}}</small>
+                            </span>
+                        </div>
+                        <p class="mb-1 text-wrap">{{repo.description}}</p>
+                        <small class="text-muted">{{repo.language}}</small>
                     </a>
                     <pagination-controls class="pagination" (pageChange)="p = $event"></pagination-controls>
                 </div>
@@ -127,24 +146,31 @@
                 <div *ngIf='gistsData!=null&&gistsData.length==0' class="status-repo-gist">
                     <img class="center img-fluid" src="../../assets/no-gist.png">
                 </div>
-                <div *ngIf='gistsData!=null&&gistsData.length>0' class="list-group list-group-flush" 
-                                                style="border-bottom:2px solid rgb(219, 219, 219);margin-bottom:20px;">
-                    <a *ngFor="let gist of gistsData" href='{{gist.html_url}}' target="_blank" class="list-group-item list-group-item-action">
-                    <!-- <a *ngFor="let gist of gistsData|paginate:{itemsPerPage:5,currentPage:p2}" href='{{gist.html_url}}' target="_blank" class="list-group-item list-group-item-action"> -->
-                    <div class="d-flex w-100 justify-content-between text-truncate">
-                        <h6 *ngFor="let k of gist.files|objArr" class="mb-1">{{k.filename}}</h6>
-                        <small class="text-muted">{{gist.created_at|date}}</small>
-                    </div>
-                    <!-- <p class="mb-1">{{gist.description}}</p> -->
+                <div *ngIf='gistsData!=null&&gistsData.length>0' class="list-group list-group-flush"
+                    style="border-bottom:2px solid rgb(219, 219, 219);margin-bottom:20px;">
+                    <a *ngFor="let gist of gistsData" href='{{gist.html_url}}' target="_blank"
+                        class="list-group-item list-group-item-action">
+                        <!-- <a *ngFor="let gist of gistsData|paginate:{itemsPerPage:5,currentPage:p2}" href='{{gist.html_url}}' target="_blank" class="list-group-item list-group-item-action"> -->
+                        <div class="d-flex w-100 justify-content-between text-truncate">
+                            <h6 *ngFor="let k of gist.files|objArr" class="mb-1">{{k.filename}}</h6>
+                            <small class="text-muted">{{gist.created_at|date}}</small>
+                        </div>
+                        <!-- <p class="mb-1">{{gist.description}}</p> -->
                     </a>
                     <!-- <pagination-controls id="second" class="pagination" (pageChange)="p2 = $event"></pagination-controls> -->
                 </div>
-                
 
-            </div><!--Repository class closed-->
 
-        </div><!--display-pan-->
+            </div>
+            <!--Repository class closed-->
 
-    </div><!--Row closed-->
+        </div>
+        <!--display-pan-->
 
-</div> <!--MAIN CONTAINER CLOSED-->
+    </div>
+    <!--Row closed-->
+
+</div>
+<!--MAIN CONTAINER CLOSED-->
+
+<!-- <div>{{html}}</div> -->
